--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
+    "swiper": "^8.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
