--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portafolio-web",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -41,6 +41,7 @@
     "@angular/compiler-cli": "~13.1.0",
     "@angular/localize": "^13.1.3",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
