--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fullpage/angular-fullpage": "0.0.16",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@ngx-translate/core": "^14.0.0",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
