--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fullpage/angular-fullpage": "0.0.16",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
