--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.2",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
@@ -41,15 +42,19 @@
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
     "@angular/localize": "^13.1.3",
+    "@types/aos": "^3.0.7",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
+    "autoprefixer": "^10.4.16",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "~4.5.2"
   }
 }
